@@ -4,12 +4,13 @@
   // private vars
   var DOCUMENT_FRAGMENT_NODE, DOCUMENT_NODE, ELEMENT_NODE, TEXT_NODE, Class,
    Document, Element, Enumerable, Form, Func, Obj, Node, NodeList, Window,
-   $break, _extend, fuse, addArrayMethods, bind, clone, concatList, defer,
-   domData, eachKey, emptyFunction, envAddTest, envTest, escapeRegExpChars,
-   expando, fromElement, getDocument, getNodeName, getWindow, hasKey, inspect,
-   isArray, isElement, isEmpty, isHash, isHostObject, isFunction, isNumber,
-   isPrimitive, isRegExp, isSameOrigin, isString, isUndefined, K, nil,
-   prependList, returnOffset, slice, toInteger, toString, undef, userAgent;
+   $break, _extend, fuse, addArrayMethods, addNodeListMethod, bind, clone,
+   concatList, defer, domData, eachKey, emptyFunction, envAddTest, envTest,
+   escapeRegExpChars, expando, fromElement, getDocument, getNodeName, getWindow,
+   getOrCreateTagClass, hasKey, inspect, isArray, isElement, isEmpty, isHash,
+   isHostObject, isFunction, isNumber, isPrimitive, isRegExp, isSameOrigin,
+   isString, isUndefined, K, nil, prependList, returnOffset, slice, toInteger,
+   toString, undef, userAgent;
 
   fuse =
   global.fuse = function fuse() { };
@@ -45,6 +46,7 @@
   fuse.$break = function $break() { };
 
   addArrayMethods =
+  addNodeListMethod =
   emptyFunction =
   fuse.emptyFunction = function emptyFunction() { };
 
